Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>The EDA on our data gives us some really good results.</p>
 
+<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Wordcloud.png" alt="Word Cloud"></p>
+
+<p>The above word cloud represents the keywords that have occurred most frequently in the dataset we had. For example, we can infer that there have been lots of papers referring to biological keywords (cells, analysis, protein, etc), while environmental sciences (water, environment,climate, etc) don't publish many papers. Thus, this gives us a pretty good idea of what we are dealing with (lots n lots of biology papers).</p>
+
+<p>Next, we see the effect of year of publishing on the number of citations.</p>
+
+<p><a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png</a>
+<a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png</a>
+<a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png</a></p>
+
+<p>As we can see above, the papers from 1800s (yes they wrote back then as well) got extremely low citations, the one's in 1950s got moderate number of citations, but the most recent ones have already got tons of citations to their name. So, yes, "Age is not just a number here", year of publishing does have an impact on citation numbers.</p>
+
+<p>In our data, we have something given as rank of paper (more details in Microsoft's paper). Let's see if it affects citation. It obviously should if you ask me. So lets see from analysis.</p>
+
+<h2></h2>
+
+<p>Okay, so my hypothesis holds true, the rank of papers do matter.</p>
+
 <p>In order to take this to the next level, we created a regression model to check out the dependent and independent values, see correlations and find out which attributes of the paper would help us most during recommendation. Even though the initial regression model: </p>
 
 <blockquote>
