Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>Next, we see the effect of year of publishing on the number of citations.</p>
 
-<p><a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png</a>
-<a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png</a>
-<a href="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png">https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png</a></p>
+<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png" alt="Image 1800s">
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png" alt="Image 1950s">
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png" alt="Image 2015s"></p>
 
 <p>As we can see above, the papers from 1800s (yes they wrote back then as well) got extremely low citations, the one's in 1950s got moderate number of citations, but the most recent ones have already got tons of citations to their name. So, yes, "Age is not just a number here", year of publishing does have an impact on citation numbers.</p>
 
