--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 <p>As we can see above, the papers from 1800s (yes they wrote back then as well) got extremely low citations, the one's in 1950s got moderate number of citations, but the most recent ones have already got tons of citations to their name. So, yes, "Age is not just a number here", year of publishing does have an impact on citation numbers.</p>
 
 <p>In our data, we have something given as rank of paper (more details in Microsoft's paper). Let's see if it affects citation. It obviously should if you ask me. So lets see from analysis.
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="High Rank Papers"></p>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="High Rank Papers"> Highly Ranked Papers</p>
 
 <h2>
-<a id="" class="anchor" href="#" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-03-08%20at%207.07.34%20AM.png" alt="Low Rank Papers">
-</h2>
+<a id="-low-ranked-papers" class="anchor" href="#-low-ranked-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-03-08%20at%207.07.34%20AM.png" alt="Low Rank Papers"> Low Ranked Papers</h2>
 
 <p>Okay, so my hypothesis holds true, the rank of papers do matter.</p>
 
