Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>Next, we see the effect of year of publishing on the number of citations.</p>
 
-<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png" alt="Image 1800s"> Papers in 1800s
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png" alt="Image 1950s"> Papers in 1950s
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png" alt="Image 2015s"> Papers in 2015s</p>
+<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1800s%20Cite.png" alt="Image 1800s"> <em>Papers in 1800s</em>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/1950s%20cite.png" alt="Image 1950s"> <em>Papers in 1950s</em>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/2015s%20Cite.png" alt="Image 2015s"> <em>Papers in 2015s</em></p>
 
 <p>As we can see above, the papers from 1800s (yes they wrote back then as well) got extremely low citations, the one's in 1950s got moderate number of citations, but the most recent ones have already got tons of citations to their name. So, yes, "Age is not just a number here", year of publishing does have an impact on citation numbers.</p>
 
 <p>In our data, we have something given as rank of paper (more details in Microsoft's paper). Let's see if it affects citation. It obviously should if you ask me. So lets see from analysis.
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="High Rank Papers"> Highly Ranked Papers</p>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="High Rank Papers"> <em>Highly Ranked Papers</em>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-03-08%20at%207.07.34%20AM.png" alt="Low Rank Papers"> <em>Low Ranked Papers</em></p>
 
-<h2>
-<a id="-low-ranked-papers" class="anchor" href="#-low-ranked-papers" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-03-08%20at%207.07.34%20AM.png" alt="Low Rank Papers"> Low Ranked Papers</h2>
+<h2></h2>
 
 <p>Okay, so my hypothesis holds true, the rank of papers do matter.</p>
 
