--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 <p>Citations have always been the best way to know popularity of a paper and it's author(s). The more the number of citations, the more popular and widely accepted the paper is. Google scholar does a great job of keeping authors and their followers keeping abreast with the status of paper/author citations. 
 So, what is a citation? In it's most rudimentary form, citation is a reference to a published paper (and author subsequently) in a paper being ready to be published. It's done in order to give attributions to others work which have been used while writing the current paper. It's a great practice, but not always an easy one. For example, if you are writing a paper on Neural Networks, their is so much information out there that you will be overwhelmed if you had to decide what all papers you should cite (since you would be going through a lot of them). To make this task easier, comes "CITATION RECOMMENDATION". The idea is to provide papers that an author should cite in his current work. Simple! Right? Well...not so much. There's just too many papers out there to be recommended that only a good algorithm will be able to give the best answers with minimum information. We tried to build something like that with our tools and knowledge of data science &amp; big data.</p>
 
-<p>To build this recommendation system, we used a dataset provided by <a href="http://research.microsoft.com/en-us/projects/mag/">Microsoft Academic Graph</a> initiative. Microsoft researchers have done a great job explaining how and why the data was curated in their <a href="http://www.www2015.it/documents/proceedings/companion/p243.pdf">paper</a>. The data (99GB uncompressed) exceeds 83 Million papers by 20 Million authors from all across the globe (literally). Now, even though the figures sound gargantuan, they really aren't in Big Data world. But, it's good enough to get us started. Anyways, I won't be able to use all the data on my personal machine (a powerful yet restricted Macbook Air). So, let's go ahead and start our ANALYSIS!</p>
+<p>To build this recommendation system, we used a dataset provided by <a href="http://research.microsoft.com/en-us/projects/mag/">Microsoft Academic Graph</a> initiative. Microsoft researchers have done a great job explaining how and why the data was curated in their <a href="http://www.www2015.it/documents/proceedings/companion/p243.pdf">paper</a>. The data (99GB uncompressed) exceeds 83 Million papers by 20 Million authors from all across the globe (literally).
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Dataset%20decrip.png" alt="Dataset description"></p>
+
+<p>Now, even though the figures sound gargantuan, they really aren't in Big Data world. But, it's good enough to get us started. Anyways, I won't be able to use all the data on my personal machine (a powerful yet restricted Macbook Air). So, let's go ahead and start our ANALYSIS!</p>
 
 <p>As the most revered data scientist say, 'know the data', the obvious first step (assuming it's clean data) would be to do 'Exploratory Data Analysis or EDA'. Sounds cool. Right? It indeed is, because this is where we see all the surprises that the data gives us- weird/missing values, strange patterns, seemingly impossible correlations and so on. </p>
 
@@ -61,9 +64,17 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>Now that we have enough familiarity with the data, we could go ahead and start our experiments using a graphDB. For our purpose, we used Neo4J, the de-facto GraphDB currently. It has a community edition available (free!!) and lots of help on forums. Neo4J uses it's own query language called - "CYPHER" (cool name for sure). CYPHER is pretty easy to understand, use and has similarity with SQL. Neo4J has a very cool UI wherein you can put in your queries and see the results right on the webpage as interactive graph/table/JSON. The graphs look really neat and organized, but it comes at the cost of clutter and node restrictions, since you can only display (&amp; interpret) certain number of nodes. Although, the number of nodes on the graph is not restricted, but once you go to 100+ nodes it becomes uninterpretable (&amp; super slow). But, this doesn't kill the purpose of GraphDB in anyway, since you can still store million of nodes in the database and do your analysis by looking at nodes, properties and relationships as awesome graphs (yup, they look pretty).</p>
 
+<p>Following is the schema of our graph.</p>
+
+<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Schema.png" alt="Schema">
+<img src="https://github.com/abhie19/MS_Academic_Graph/blob/master/Images/GraphSchema.png" alt="Graph Example"></p>
+
 <p>Evaluation:</p>
 
 <p>In order to evaluate the performance of our recommendation system, we use Precision and Recall as the metric. For a given paper, we compare the existing citations with the ones recommended by our system. The details could be found in the report.</p>
+
+<p>Precision and recall comparison based on number of papers considered:
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Evaluation.png" alt="Precision &amp; Recall"></p>
 
 <p>Conclusion:</p>
 
