Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
 
     <section class="main-content">
       <h2>
-<a id="hello-folks-today-i-will-share-another-cool-project-i-had-been-working-on-during-my-semester-its-called-citation-recommendation-in-microsoft-academic-graph" class="anchor" href="#hello-folks-today-i-will-share-another-cool-project-i-had-been-working-on-during-my-semester-its-called-citation-recommendation-in-microsoft-academic-graph" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello folks! Today, I will share another cool project I had been working on during my semester. It's called "CITATION RECOMMENDATION IN MICROSOFT ACADEMIC GRAPH".</h2>
+<a id="hello-folks" class="anchor" href="#hello-folks" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello folks!</h2>
+
+<p>Today, I will share another cool project I had been working on during my semester. It's called "CITATION RECOMMENDATION IN MICROSOFT ACADEMIC GRAPH". </p>
 
 <p>Citations have always been the best way to know popularity of a paper and it's author(s). The more the number of citations, the more popular and widely accepted the paper is. Google scholar does a great job of keeping authors and their followers keeping abreast with the status of paper/author citations. 
 So, what is a citation? In it's most rudimentary form, citation is a reference to a published paper (and author subsequently) in a paper being ready to be published. It's done in order to give attributions to others work which have been used while writing the current paper. It's a great practice, but not always an easy one. For example, if you are writing a paper on Neural Networks, their is so much information out there that you will be overwhelmed if you had to decide what all papers you should cite (since you would be going through a lot of them). To make this task easier, comes "CITATION RECOMMENDATION". The idea is to provide papers that an author should cite in his current work. Simple! Right? Well...not so much. There's just too many papers out there to be recommended that only a good algorithm will be able to give the best answers with minimum information. We tried to build something like that with our tools and knowledge of data science &amp; big data.</p>
@@ -34,7 +36,9 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 <p>As the most revered data scientist say, 'know the data', the obvious first step (assuming it's clean data) would be to do 'Exploratory Data Analysis or EDA'. Sounds cool. Right? It indeed is, because this is where we see all the surprises that the data gives us- weird/missing values, strange patterns, seemingly impossible correlations and so on. </p>
 
 <h2>
-<a id="the-eda-on-our-data-gives-us-some-really-good-results" class="anchor" href="#the-eda-on-our-data-gives-us-some-really-good-results" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The EDA on our data gives us some really good results.</h2>
+<a id="exploratory-data-analysis" class="anchor" href="#exploratory-data-analysis" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Exploratory Data Analysis</h2>
+
+<p>EDA on our data gives us some really good results.</p>
 
 <p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Wordcloud.png" alt="Word Cloud"></p>
 
@@ -49,8 +53,8 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 <p>As we can see above, the papers from 1800s (yes they wrote back then as well) got extremely low citations, the one's in 1950s got moderate number of citations, but the most recent ones have already got tons of citations to their name. So, yes, "Age is not just a number here", year of publishing does have an impact on citation numbers.</p>
 
 <p>In our data, we have something given as rank of paper (more details in Microsoft's paper). Let's see if it affects citation. It obviously should if you ask me. So lets see from analysis.
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="High Rank Papers"> <em>Highly Ranked Papers</em>
-<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-03-08%20at%207.07.34%20AM.png" alt="Low Rank Papers"> <em>Low Ranked Papers</em></p>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Rank%20low.png" alt="Low Rank Papers"> <em>Low Ranked Papers</em>
+<img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/rank%20high.png" alt="High Rank Papers"> <em>High Ranked Papers</em></p>
 
 <h2></h2>
 
@@ -72,7 +76,7 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Schema.png" alt="Schema"></p>
 
-<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/blob/master/Images/GraphSchema.png" alt="Graph Example"></p>
+<p><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/GraphSchema.png" alt="Graph Example"></p>
 
 <h2>
 <a id="evaluation" class="anchor" href="#evaluation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Evaluation:</h2>
