Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>We successfully completed the task of paper citation recommendation. We got the best accuracy of 18% when we varied the number of recommended citations to 60. We believe this result can be improved by considered additional features (especially paper abstract/content for topic modeling) provided in the dataset. </p>
 
-<p>Here's a demo video of the project.</p>
+<p>Here's a demo video of the Graph DB:</p>
+
+<p><a href="https://youtu.be/NbBhf_Gx-Vg">https://youtu.be/NbBhf_Gx-Vg</a></p>
+
+<p>Also, you can find my report here. </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/abhie19/MS_Academic_Graph">Microsoft academic graph</a> is maintained by <a href="https://github.com/abhie19">abhie19</a>.</span>
