Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ So, what is a citation? In it's most rudimentary form, citation is a reference t
 
 <p>Here's a demo video of the Graph DB:</p>
 
-<p><a href="https://youtu.be/NbBhf_Gx-Vg"><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/GraphSchema.png" alt="Neo4J Demo"></a></p>
+<p><a href="https://youtu.be/NbBhf_Gx-Vg"><img src="https://raw.githubusercontent.com/abhie19/MS_Academic_Graph/master/Images/Screen%20Shot%202016-06-01%20at%2010.42.14%20PM.png" alt="Neo4J Demo"></a></p>
 
 <p>Also, you can find my report here. </p>
 
